# Concurrency-library

./: CMakeLists.txt  README.md  drawingnotes.xopp
examples/: dinning_philosphers.cpp
src/: back_off.hpp  lock.cpp  parallel_accumulate.cpp
src/data_structures/: circular_buffer.cpp  thread_safe_queue.hpp  thread_safe_stack.hpp
src/locks/: filter_lock.hpp  queue_lock.hpp  spin_lock.cpp
src/utils/: back_off.hpp  cache_aligned_data.hpp  jthread.hpp
tests/: bench_array_lock_cached.cpp  bench_array_lock_raw.cpp  test_thread_safe_queue.cpp
